syntax = "proto3";
package mail_base;

enum AccountStatus {
  success = 0;
  empty = 1;
  expired = 2;
}

message MailAddress {
  string name = 1;
  string address = 2;
}

enum MailProtocal {
  none = 0;
  starttls = 1;
  tls = 2;
}

message Account {
  MailAddress mail_address = 1;
  AccountStatus status = 2;
  string smtp_server = 3;
  string smtp_account = 4;
  int32 smtp_port = 5;
  string smtp_password = 6;
  MailProtocal smtp_protocol = 7;
  string imap_server = 8;
  int32 imap_port = 9;
  string imap_account = 10;
  string imap_password = 11;
  MailProtocal imap_protocol = 12;
}